methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: not found: value Yellow
    makeV(Yellow);
          ^