methods.picture.MethodsPicture.scala.code
override def run() {
  for (steve<-1 to 4) {
    forward();forward();
    makeV(Yellow);
    forward();forward();
    left();
  }
  
  
}

def makeV(c: Color) {
  setBrushColor(c)
  brushDown();
  brushUp();
  forward();
  left();
  forward();
  brushDown();
  brushUp();
  backward();
  right();
  forward();
  brushDown();
  brushUp();
}